apps/base/arm/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: arm
  template:
    metadata:
      labels:
        app: arm
        app.kubernetes.io/name: arm
        app.kubernetes.io/instance: arm
    spec:
      nodeSelector:
        kubernetes.io/hostname: kube-3
      containers:
        - name: arm
          image: automaticrippingmachine/automatic-ripping-machine:2.22.1
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
              devic.es/dvd-writer: "1"
            limits:
              cpu: "4"
              memory: "4Gi"
              devic.es/dvd-writer: "1"
          volumeMounts:
            - name: arm-home
              mountPath: /home/arm
              subPath: arm/home
            - name: arm-home
              mountPath: /home/arm/logs
              subPath: arm/logs
            - name: arm-media
              mountPath: /home/arm/media
              subPath: arm/media
            - name: arm-config
              mountPath: /etc/arm/config
            - name: jellyfin-data
              mountPath: /home/arm/media/completed
              subPath: media/ripped
      volumes:
      - name: arm-home
        persistentVolumeClaim:
          claimName: arm-home-pvc
      - name: arm-media
        persistentVolumeClaim:
          claimName: arm-media-pvc
      - name: arm-config-tpl
        configMap:
          name: arm-config
      - name: arm-config
        emptyDir: {}
      - name: jellyfin-data
        persistentVolumeClaim:
          claimName: jellyfin-data-pvc
      securityContext: {}
