apps/base/arm/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: arm
  labels:
    app.kubernetes.io/name: arm
    app.kubernetes.io/instance: arm
spec:
  selector:
    app.kubernetes.io/name: arm
    app.kubernetes.io/instance: arm
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
