apps/base/arm/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arm
spec:
  ingressClassName: traefik
  rules:
    - host: arm.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arm
                port:
                  name: http
