apps/base/arm/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: arm-route
  namespace: arm
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - arm.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: arm
          port: 8080
